Updated page TechDraw DraftView/fr

--- a/wiki/fr/TechDraw_DraftView.html
+++ b/wiki/fr/TechDraw_DraftView.html
@@ -59,17 +59,15 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Vous pouvez faire pivoter la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a>. La direction de la cam&eacute;ra dans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a> d&eacute;termine la valeur initiale de la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Direction</b> de la vue.</li>
-<li>S&eacute;lectionnez un ou plusieurs objets dans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a> ou dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>. Une vue distincte sera cr&eacute;&eacute;e pour chaque objet.</li>
-<li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: vous pouvez ajouter la feuille souhait&eacute;e &agrave; la s&eacute;lection en la s&eacute;lectionnant dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
+<ol><li>Vous pouvez faire pivoter la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a>. La direction de la cam&eacute;ra dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a> d&eacute;termine la valeur initiale de la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Direction</b> de la vue.</li>
+<li>S&eacute;lectionnez un ou plusieurs objets dans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a> ou dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Une vue distincte sera cr&eacute;&eacute;e pour chaque objet.</li>
+<li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: vous pouvez ajouter la feuille souhait&eacute;e &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_DraftView.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DraftView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer un objet de l'atelier Draft</a></span>.</li>
 <li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues des autres ateliers &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_DraftView.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_DraftView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer un objet de l'atelier Draft</b> du menu.</li></ul></li>
 <li>S'il y a plusieurs feuilles de dessin dans le document et que vous n'avez pas encore s&eacute;lectionn&eacute; de feuille, la fen&ecirc;tre de dialogue <b>S&eacute;lecteur de feuilles</b> s'ouvre&nbsp;:
 <ol><li>S&eacute;lectionnez la feuille d&eacute;sir&eacute;e.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li></ol>
-</div>
 <h2><span class="mw-headline" id="Options">Options</span></h2>
 <div class="mw-translate-fuzzy">
 <ul><li>La cr&eacute;ation d'une vue d'un objet Draft d'un calque traitera de mani&egrave;re r&eacute;cursive tous les objets trouv&eacute;s dans ce calque. La vue est mise &agrave; jour automatiquement lorsque le contenu du calque change.</li>
@@ -171,13 +169,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124183613
+Cached time: 20260124183829
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.111 seconds
-Real time usage: 0.151 seconds
-Preprocessor visited node count: 992/1000000
+CPU time usage: 0.127 seconds
+Real time usage: 0.180 seconds
+Preprocessor visited node count: 991/1000000
 Post&#8208;expand include size: 31673/2097152 bytes
 Template argument size: 10832/2097152 bytes
 Highest expansion depth: 7/100
@@ -187,19 +185,19 @@ Unstrip post&#8208;expand size: 2328/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.307      1 -total
- 16.54%    8.486     12 Template:PropertyData
- 13.32%    6.833      1 Template:TechDraw_Tools_navi/fr
- 11.67%    5.988     12 Template:Variable
- 10.19%    5.229      2 Template:Navigation_menu_2
- 10.15%    5.210      2 Template:TitleProperty
-  6.53%    3.350      1 Template:GuiCommand/fr
-  6.26%    3.212      1 Template:Userdocnavi/fr
-  5.99%    3.072      2 Template:Docnav/fr
-  5.70%    2.923      1 Template:Code
+100.00%   57.821      1 -total
+ 17.22%    9.958     12 Template:PropertyData
+ 14.22%    8.222      1 Template:TechDraw_Tools_navi/fr
+ 12.18%    7.044     12 Template:Variable
+ 10.69%    6.183      2 Template:Navigation_menu_2
+  9.43%    5.450      2 Template:TitleProperty
+  7.71%    4.459      1 Template:GuiCommand/fr
+  7.69%    4.445      1 Template:Userdocnavi/fr
+  6.31%    3.650      1 Template:Version/fr
+  5.98%    3.456      5 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180672-0!canonical and timestamp 20260124183612 and revision id 1743422. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180672-0!canonical and timestamp 20260124183829 and revision id 1743424. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
