Updated page TechDraw DraftView/fr

--- a/wiki/fr/TechDraw_DraftView.html
+++ b/wiki/fr/TechDraw_DraftView.html
@@ -69,13 +69,11 @@
 <ol><li>S&eacute;lectionnez la feuille d&eacute;sir&eacute;e.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li></ol>
 <h2><span class="mw-headline" id="Options">Options</span></h2>
-<div class="mw-translate-fuzzy">
 <ul><li>La cr&eacute;ation d'une vue d'un objet Draft d'un calque traitera de mani&egrave;re r&eacute;cursive tous les objets trouv&eacute;s dans ce calque. La vue est mise &agrave; jour automatiquement lorsque le contenu du calque change.</li>
 <li>Il n'y a pas de suppression de ligne cach&eacute;e. Chaque face trouv&eacute;e dans le ou les objets manipul&eacute;s sera simplement projet&eacute;e le long du vecteur Direction, aucune action sp&eacute;cifique n'est entreprise lorsque les faces se chevauchent.</li>
 <li>La vue d'un objet Draft prend &eacute;galement en charge tous les objets Draft qui ne sont pas bas&eacute;s sur des objets Part, tels que les cotes et les textes.</li>
 <li>La couleur, la largeur et le motif des lignes peuvent &ecirc;tre sp&eacute;cifi&eacute;s dans les propri&eacute;t&eacute;s. Les motifs de ligne peuvent &ecirc;tre affin&eacute;s en donnant directement une valeur <a rel="nofollow" class="external text" href="https://www.w3.org/TR/SVG/painting.html#StrokeProperties">stroke-dasharray</a>, telle que 3,5.</li>
 <li>Les surfaces projet&eacute;es sont remplies de la couleur de la surface.</li></ul>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -169,13 +167,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124183829
+Cached time: 20260124183840
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.127 seconds
-Real time usage: 0.180 seconds
-Preprocessor visited node count: 991/1000000
+CPU time usage: 0.102 seconds
+Real time usage: 0.154 seconds
+Preprocessor visited node count: 990/1000000
 Post&#8208;expand include size: 31673/2097152 bytes
 Template argument size: 10832/2097152 bytes
 Highest expansion depth: 7/100
@@ -185,19 +183,19 @@ Unstrip post&#8208;expand size: 2328/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.821      1 -total
- 17.22%    9.958     12 Template:PropertyData
- 14.22%    8.222      1 Template:TechDraw_Tools_navi/fr
- 12.18%    7.044     12 Template:Variable
- 10.69%    6.183      2 Template:Navigation_menu_2
-  9.43%    5.450      2 Template:TitleProperty
-  7.71%    4.459      1 Template:GuiCommand/fr
-  7.69%    4.445      1 Template:Userdocnavi/fr
-  6.31%    3.650      1 Template:Version/fr
-  5.98%    3.456      5 Template:Value
+100.00%   51.454      1 -total
+ 13.53%    6.963     12 Template:PropertyData
+ 13.30%    6.845      1 Template:TechDraw_Tools_navi/fr
+  9.63%    4.957      2 Template:TitleProperty
+  9.47%    4.874     12 Template:Variable
+  9.46%    4.867      2 Template:Navigation_menu_2
+  8.30%    4.271      1 Template:GuiCommand/fr
+  7.84%    4.032      2 Template:Docnav/fr
+  6.79%    3.494      1 Template:Userdocnavi/fr
+  6.72%    3.459     17 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180672-0!canonical and timestamp 20260124183829 and revision id 1743424. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180672-0!canonical and timestamp 20260124183839 and revision id 1743426. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
