Updated page TechDraw SpreadsheetView/fr

--- a/wiki/fr/TechDraw_SpreadsheetView.html
+++ b/wiki/fr/TechDraw_SpreadsheetView.html
@@ -100,14 +100,12 @@
 <li><span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Line Width</b><span style="font-size:80%;"> (<code>Float</code>)</span>&nbsp;: largeur des bordures des cellules.</li></ul>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ArchView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ArchView.html" title="TechDraw ArchView/fr">Vue d'un objet Arch</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_StackTop.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_StackTop.html" title="TechDraw StackTop/fr">Empiler en haut</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_Dimension.html" title="TechDraw Dimension/fr">Cote</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -147,15 +145,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124184114
+Cached time: 20260124184130
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.146 seconds
-Preprocessor visited node count: 865/1000000
-Post&#8208;expand include size: 30707/2097152 bytes
-Template argument size: 10398/2097152 bytes
+CPU time usage: 0.092 seconds
+Real time usage: 0.126 seconds
+Preprocessor visited node count: 864/1000000
+Post&#8208;expand include size: 30680/2097152 bytes
+Template argument size: 10380/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -163,19 +161,19 @@ Unstrip post&#8208;expand size: 1706/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.475      1 -total
- 18.51%    8.975     12 Template:PropertyData
- 15.60%    7.564      2 Template:TitleProperty
- 13.70%    6.643      1 Template:TechDraw_Tools_navi/fr
- 13.18%    6.389     12 Template:Variable
- 10.81%    5.242      1 Template:GuiCommand/fr
-  9.36%    4.538      2 Template:Navigation_menu_2
-  7.37%    3.573      1 Template:Caption
-  7.02%    3.403      2 Template:Version/fr
-  6.42%    3.111      1 Template:Userdocnavi/fr
+100.00%   38.801      1 -total
+ 21.88%    8.489     12 Template:PropertyData
+ 19.67%    7.634      1 Template:TechDraw_Tools_navi/fr
+ 14.94%    5.796     12 Template:Variable
+ 12.64%    4.904      2 Template:Navigation_menu_2
+ 10.77%    4.180      1 Template:Userdocnavi/fr
+  9.63%    3.735      1 Template:GuiCommand/fr
+  7.27%    2.822      2 Template:TitleProperty
+  6.11%    2.372      2 Template:Docnav/fr
+  5.63%    2.186     11 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180714-0!canonical and timestamp 20260124184113 and revision id 1743434. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180714-0!canonical and timestamp 20260124184129 and revision id 1743436. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
