--- a/wiki/fr/TechDraw_SpreadsheetView.html
+++ b/wiki/fr/TechDraw_SpreadsheetView.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw SpreadsheetView/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+SpreadsheetView&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_SpreadsheetView.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Tabellenansicht (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_SpreadsheetView.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw SpreadsheetView (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_SpreadsheetView.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Vista di un foglio di calcolo (72% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_SpreadsheetView.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw widok Arkusza kalkulacyjnego (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/TechDraw_SpreadsheetView.html" class="mw-pt-progress mw-pt-progress--low" title="Visualizar planilha do TechDraw (6% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
@@ -61,24 +61,19 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>S&eacute;lectionnez un objet Spreadsheet dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
-<li>Si le document contient plusieurs feuilles de dessin&nbsp;: ajoutez la feuille souhait&eacute;e &agrave; la s&eacute;lection en la s&eacute;lectionnant dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
+<ol><li>S&eacute;lectionnez un objet Spreadsheet dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
+<li>Si le document contient plusieurs feuilles de dessin&nbsp;: ajoutez la feuille souhait&eacute;e &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues des autres ateliers &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_SpreadsheetView.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SpreadsheetView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une vue de l'atelier Spreadsheet</b> du menu.</li>
 <li>S'il y a plusieurs feuilles de dessin dans le document, et si aucune feuille n'est affich&eacute;e dans la <a href="../fr/Main_view_area.html" class="mw-redirect" title="Main view area/fr">zone de vue principale</a> et que vous n'avez pas encore s&eacute;lectionn&eacute; de feuille, la fen&ecirc;tre de dialogue <b>S&eacute;lecteur de feuilles</b> s'ouvre&nbsp;:
 <ol><li>S&eacute;lectionnez la feuille souhait&eacute;e.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
 <li>Une vue de Spreadsheet est ins&eacute;r&eacute;e.</li>
 <li>Ajustez la plage de cellules de la vue en modifiant ses propri&eacute;t&eacute;s <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Cell Start</b> et <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Cell End</b>.</li></ol>
-</div>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Voir aussi&nbsp;: <a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
-</p>
-</div>
-<p>Une vue d'un objet Spreadsheet, en fait un objet <code>TechDraw::DrawViewSpreadsheet</code>, poss&egrave;de les <a href="../fr/TechDraw_View.html#Propri%C3%A9t%C3%A9s_Vue_de_Part" title="TechDraw View/fr">propri&eacute;t&eacute;s</a> communes &agrave; tous les types de vues. Elle poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
+<p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
+</p><p>Une vue d'un objet Spreadsheet, en fait un objet <code>TechDraw::DrawViewSpreadsheet</code>, poss&egrave;de les <a href="../fr/TechDraw_View.html#Propri%C3%A9t%C3%A9s_Vue_de_Part" title="TechDraw View/fr">propri&eacute;t&eacute;s</a> communes &agrave; tous les types de vues. Elle poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
 </p><p><span id="Data"></span>
 </p>
 <h3><span id="Donn.C3.A9es"></span><span class="mw-headline" id="Donn&eacute;es">Donn&eacute;es</span></h3>
@@ -143,35 +138,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124184157
+Cached time: 20260124184343
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.115 seconds
-Real time usage: 0.159 seconds
-Preprocessor visited node count: 863/1000000
-Post&#8208;expand include size: 30680/2097152 bytes
-Template argument size: 10380/2097152 bytes
+CPU time usage: 0.108 seconds
+Real time usage: 0.229 seconds
+Preprocessor visited node count: 867/1000000
+Post&#8208;expand include size: 30708/2097152 bytes
+Template argument size: 10402/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1706/5000000 bytes
+Unstrip post&#8208;expand size: 1710/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.697      1 -total
- 21.60%   10.088     12 Template:PropertyData
- 17.45%    8.149      1 Template:TechDraw_Tools_navi/fr
- 15.01%    7.008     12 Template:Variable
- 11.69%    5.458      2 Template:TitleProperty
- 11.20%    5.229      2 Template:Navigation_menu_2
- 10.93%    5.105      1 Template:Userdocnavi/fr
-  7.24%    3.383      2 Template:Docnav/fr
-  6.98%    3.258      1 Template:GuiCommand/fr
-  5.73%    2.675     11 Template:Incode
+100.00%   81.780      1 -total
+ 20.98%   17.154     12 Template:PropertyData
+ 16.38%   13.393      1 Template:TechDraw_Tools_navi/fr
+ 13.19%   10.788     12 Template:Variable
+ 12.82%   10.483      2 Template:Navigation_menu_2
+  9.19%    7.514      2 Template:TitleProperty
+  8.46%    6.920      1 Template:Userdocnavi/fr
+  8.41%    6.878      2 Template:MenuCommand
+  6.89%    5.633      1 Template:GuiCommand/fr
+  5.74%    4.698      2 Template:Version/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180714-0!canonical and timestamp 20260124184157 and revision id 1743438. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180714-0!canonical and timestamp 20260124184343 and revision id 1743442. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
